# release

./: .gitignore  README.md  pyproject.toml
examples/: confluence_example.md  jira_example.md  slack_example.txt
release_notes_gen/: __init__.py  __main__.py  csv_loader.py  llm.py  prompts.py  ui_streamlit.py  writer.py
release_notes_gen/bulk_refiner/: __init__.py  csv_schema.py  epic_audit.py  fix_versions.py  pipeline.py  prompts.py  refine.py  types.py  writer.py
release_notes_gen/epic_refiner/: __init__.py  parse.py  pipeline.py  prompts.py  writer.py
release_notes_gen/profiles/: __init__.py  squads.py  squads.yaml
tests/: test_bulk_csv_schema.py  test_bulk_pipeline.py  test_bulk_writer.py  test_csv_loader.py  test_epic_refiner_parse.py
